--- a/resources/crates.yml
+++ b/resources/crates.yml
@@ -1,30 +1,15 @@
 crates:
-  Epic:
+  Common:
     drops:
-      - name: "§bSword Legend"
-        item: "diamond_sword"
-        amount: 1
-        chance: 25
-        enchantments:
-        - name: "Sharpness"
-          level: 2
-        - name: "Fire Aspect"
-          level: 2
-      - name: "§bDiamond Axe"
-        item: "diamond_axe"
-        amount: 1
-        chance: 25
-      - item: "cooked_chicken"
+      - item: "cooked_beef"
         amount: 64
         chance: 15
-      - name: "Makanan"
-        item: "bread"
-        amount: 64
+      - item: "minecraft:diamond_helmet'
+        amount: 1
         chance: 15
-      - name: "Makanan"
-        item: "cooked_beef"
+      - item: "1:0"
         amount: 64
         chance: 15
     amount: 1
-    commands: ["say §l§e{PLAYER}\n§7Has Opened Crate: §eCringe"]
-    floating-text: "Epic Crate"
+    commands: ["say §e{PLAYER} §fhas opened common crate."]
+    floating-text: "Common Crate"
