--- a/.poggit.yml
+++ b/.poggit.yml
@@ -13,4 +13,6 @@ projects:
         version: ^4.6.5
       - src: DaPigGuy/libPiggyUpdateChecker/libPiggyUpdateChecker
         version: ^1.0.0
+      - src: jojoe77777/FormAPI/libFormAPI
+        version: ^2.1.1
 ...
