--- a/.poggit.yml
+++ b/.poggit.yml
@@ -7,7 +7,7 @@ projects:
     path: ""
     icon: "images (32).jpeg"
     libs:
-      - src: CortexPE\Commando\Commando
+      - src: CortexPE/Commando/Commando
         version: ^3.2.0
       - src: Muqsit/invmenu/InvMenu
         version: ^4.6.5
