--- a/.poggit.yml
+++ b/.poggit.yml
@@ -8,7 +8,7 @@ projects:
     icon: "images (32).jpeg"
     libs:
       - src: CortexPE/Commando/Commando
-        version: ^3.1.0
+        version: 3.2.0
       - src: Muqsit/invmenu/InvMenu
         version: ^4.6.5
       - src: DaPigGuy/libPiggyUpdateChecker/libPiggyUpdateChecker
