--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: MCrates
 main: Mrchlldev\MCrates\MCrates
-version: 1.0.0-BETA
+version: 1.0.1
 api: 5.3.0
 author: "DaPigGuy, Mrchlldev"
 
@@ -11,15 +11,15 @@ permissions:
   mcrate.command:
     default: op
     description: "Allow usage of all MCrates commands"
+  mcrate.command.list:
+    default: op
+    description: "Allow usage of the /mcrate list"
   mcrate.command.crate:
     default: op
-    description: "Allow usage of the /crate command"
-  mcrate.command.keyshop:
-    default: true
-    description: "Allow usage of the /keyshop command"
+    description: "Allow usage of the /mcrate command"
   mcrate.command.key:
     default: op
-    description: "Allow usage of the /key command"
+    description: "Allow usage of the /mcrate key command"
   mcrate.command.keyall:
     default: op
-    description: "Allow usage of the /keyall command"
+    description: "Allow usage of the /mcrate keyall command"
