--- a/.poggit.yml
+++ b/.poggit.yml
@@ -7,8 +7,8 @@ projects:
     path: ""
     icon: "20240814_111146.jpg"
     libs:
-      - src: CortexPE/Commando/BaseCommand
-        version: ^3.2.0
+      - src: CortexPE\Commando
+        version: ^3.1.0
       - src: Muqsit/invmenu/InvMenu
         version: ^4.6.5
       - src: DaPigGuy/libPiggyUpdateChecker/libPiggyUpdateChecker
